--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.7.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "chart.js": "^4.0.1",
     "ethers": "^5.7.2",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
