--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ethers": "^5.7.2",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
